2009-07-14  Donal K. Fellows  <dkf@users.sf.net>

	* doc/canvas.n (WINDOW ITEMS): [Bug 2326602]: Corrected definition of
	the -height and -width options for these items.

	* unix/configure.in: [Bug 2496018]: Allow the disabling of the use of
	XScreenSaver at configuration time, so as to permit better control of
	dependencies in the embedded case.

2009-07-11  Donal K. Fellows  <dkf@users.sf.net>

	* doc/grid.n: [Bug 2818455]: Corrected example.

2009-07-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkInt.h: Avoid using C++ reserved word in header.

2009-06-30  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkInt.h:		Add assert macros for clang static
					analyzer and redefine Tcl_Panic to
					assert after panic in clang PURIFY
					builds.

	* generic/tkImgPhInstance.c:	Small fixes to make clang static
	* generic/tkTextDisp.c:		analyzer happier.

	* generic/tkConfig.c:		Add clang assert for false positives
	* generic/tkUndo.c:		from static analyzer.

2009-06-29  Daniel Steffen  <das@users.sourceforge.net>

	Merge of TkAqua Cocoa port <http://github.com/das/tcltk/tree/de-carbon>
	*** POTENTIAL INCOMPATIBILITY *** 

	* macosx/tkMacOSX.h:		Large-scale rewrite of TkAqua migrating
	* macosx/tkMacOSXBitmap.c:	all use of deprecated Carbon API to
	* macosx/tkMacOSXButton.c:	Cocoa API; now supports 64bit
	* macosx/tkMacOSXClipboard.c:	architecture and requires Mac OS X 10.5
	* macosx/tkMacOSXColor.c:	or later; with TkAqua enabled, all Tk
	* macosx/tkMacOSXConfig.c:	sources are now built with the
	* macosx/tkMacOSXCursor.c:	Objective-C compiler and running in
	* macosx/tkMacOSXDebug.c:	Objective-C garbage collection mode as
	* macosx/tkMacOSXDebug.h:	well as in retain-release mode is
	* macosx/tkMacOSXDefault.h:	supported; detailed development history
	* macosx/tkMacOSXDialog.c:	is available in github repository.
	* macosx/tkMacOSXDraw.c:
	* macosx/tkMacOSXEmbed.c:	There should be no script-visible